overflow correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@ body{
   overflow: hidden;
 }
 
+.website{
+ overflow: hidden; 
+}
+
 .loader{
   position: absolute;
   top: -10px;
